adding 5min grace period to ecs

--- a/cfn-templates/cfn-nocodb.yaml
+++ b/cfn-templates/cfn-nocodb.yaml
@@ -107,6 +107,7 @@ Resources:
         MinimumHealthyPercent: 0
       DesiredCount: !Ref DesiredCount
       EnableExecuteCommand: true
+      HealthCheckGracePeriodSeconds: 300
       TaskDefinition: !Ref TaskDefinition
       PlatformVersion: "1.4.0"
       LoadBalancers:
