adding more excluded characters

--- a/cfn-templates/cfn-db.yaml
+++ b/cfn-templates/cfn-db.yaml
@@ -113,7 +113,7 @@ Resources:
         SecretStringTemplate: !Sub '{"username": "${DBUsername}"}'
         GenerateStringKey: "password"
         PasswordLength: 16
-        ExcludeCharacters: '"@/\'
+        ExcludeCharacters: '"@/\&$#<>'
 
   MasterDB:
     Type: "AWS::RDS::DBCluster"
