--- a/cfn-templates/cfn-db.yaml
+++ b/cfn-templates/cfn-db.yaml
@@ -114,6 +114,7 @@ Resources:
         GenerateStringKey: "password"
         PasswordLength: 16
         ExcludeCharacters: '"@/\&$#<>'
+        ExcludePunctuation: true
 
   MasterDB:
     Type: "AWS::RDS::DBCluster"
